Bug 426270 - Error transferrring https://odrs.gnome.org/1.0/reviews/api/fetch - server replied: BAD REQUEST
Summary: Error transferrring https://odrs.gnome.org/1.0/reviews/api/fetch - server rep...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: 5.19.4
Platform: Other Other
: HI normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL: https://odrs.gnome.org/1.0/reviews/ap...
Keywords: regression
: 455158 (view as bug list)
Depends on:
Blocks:
 
Reported: 2020-09-07 08:56 UTC by postix
Modified: 2022-07-23 11:30 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24.6
Sentry Crash Report:


Attachments
ODRS error (378.55 KB, image/png)
2022-01-21 23:51 UTC, Viorel-Cătălin Răpițeanu
Details
Not being able to install because of the bug (417.66 KB, image/png)
2022-03-04 19:09 UTC, B Negri
Details

Note You need to log in before you can comment on or make changes to this bug.
Description postix 2020-09-07 08:56:46 UTC
When I opened Discover today, I saw the error in the title. Has the API changed?


SOFTWARE/OS VERSIONS
Operating System: Manjaro Linux
KDE Plasma Version: 5.19.4
KDE Frameworks Version: 5.73.0
Qt Version: 5.15.0
Comment 1 Nate Graham 2020-09-08 13:07:26 UTC
I periodically see this too.
Comment 2 postix 2021-03-01 14:22:40 UTC
Nate, do you still see it or can we close it? If so, do you have a link to the fix? FWIW I haven't seen it in a while.
Comment 3 Nate Graham 2021-03-02 00:29:15 UTC
Nope. Maybe it was a server-side glitch that got fixed.
Comment 4 Christopher Yeleighton 2022-01-14 18:45:55 UTC
Still present in 5.23.4.  The failure notification pops up but my opinion got posted anyway, so I am not sure what is going on.  The URL itself is not found.
Comment 5 Viorel-Cătălin Răpițeanu 2022-01-21 23:48:42 UTC
This issue is still occurring. Regarding the origin, this was also on Gnome a while ago: https://gitlab.gnome.org/GNOME/gnome-software/-/issues/527
Maybe the same implementation can be used here as well?
Comment 6 Viorel-Cătălin Răpițeanu 2022-01-21 23:51:14 UTC
Created attachment 145738 [details]
ODRS error

Similar issue on Gnome side with merged fix: https://gitlab.gnome.org/GNOME/gnome-software/-/issues/527
Comment 7 B Negri 2022-03-04 19:09:45 UTC
Created attachment 147281 [details]
Not being able to install because of the bug
Comment 8 Nate Graham 2022-07-18 16:30:16 UTC
STEPS TO REPRODUCE
1. Open Discover
2. Immediately click on any app

OBSERVED RESULTS
*Sometimes* reviews do not load, and Discover shows an error saying Error transferring https://odrs.gnome.org/1.0/reviews/api/fetch - server replied: BAD REQUEST"

 Console log has a bit more detail:

org.kde.plasma.libdiscover: error fetching reviews: "Error transferring https://odrs.gnome.org/1.0/reviews/api/fetch - server replied: BAD REQUEST" "{\n    \"msg\": \"missing data, expected version\",\n    \"success\": false\n}"

When this happens, it's generally possible to wait a few moments, navigate to any other app, and then the reviews section will load.
Comment 9 Bug Janitor Service 2022-07-20 16:28:31 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/330
Comment 10 Aleix Pol 2022-07-20 22:53:33 UTC
Git commit fd9cdd9becf250f4e79cd5d7204f903d6bead4f8 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 20/07/2022 at 22:45.
Pushed by apol into branch 'master'.

odrs: Make sure we don't fail when the application page is opened early

If it's too early, on the packagekit backend the version won't be
populated yet. In this case we just skip fetching and refetch when the
versions change.

M  +2    -0    libdiscover/ReviewsBackend/ReviewsModel.cpp
M  +5    -1    libdiscover/appstream/OdrsReviewsBackend.cpp

https://invent.kde.org/plasma/discover/commit/fd9cdd9becf250f4e79cd5d7204f903d6bead4f8
Comment 11 Aleix Pol 2022-07-20 22:53:46 UTC
Git commit 55ee333e7a22893bd3cf1b1212b98504694cb928 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 20/07/2022 at 22:53.
Pushed by apol into branch 'Plasma/5.25'.

odrs: Make sure we don't fail when the application page is opened early

If it's too early, on the packagekit backend the version won't be
populated yet. In this case we just skip fetching and refetch when the
versions change.


(cherry picked from commit fd9cdd9becf250f4e79cd5d7204f903d6bead4f8)

M  +2    -0    libdiscover/ReviewsBackend/ReviewsModel.cpp
M  +5    -1    libdiscover/appstream/OdrsReviewsBackend.cpp

https://invent.kde.org/plasma/discover/commit/55ee333e7a22893bd3cf1b1212b98504694cb928
Comment 12 Aleix Pol 2022-07-20 22:54:05 UTC
Git commit 442c31f4cb50283dc6ad2f7fb0f2286a00b5a921 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 20/07/2022 at 22:54.
Pushed by apol into branch 'Plasma/5.24'.

odrs: Make sure we don't fail when the application page is opened early

If it's too early, on the packagekit backend the version won't be
populated yet. In this case we just skip fetching and refetch when the
versions change.


(cherry picked from commit fd9cdd9becf250f4e79cd5d7204f903d6bead4f8)

M  +2    -0    libdiscover/ReviewsBackend/ReviewsModel.cpp
M  +5    -1    libdiscover/appstream/OdrsReviewsBackend.cpp

https://invent.kde.org/plasma/discover/commit/442c31f4cb50283dc6ad2f7fb0f2286a00b5a921
Comment 13 Patrick Silva 2022-07-23 11:30:03 UTC
*** Bug 455158 has been marked as a duplicate of this bug. ***