odrs: Make sure we don't fail when the application page is opened early

If it's too early, on the packagekit backend the version won't be
populated yet. In this case we just skip fetching and refetch when the
versions change.

BUG: 426270


(cherry picked from commit fd9cdd9becf250f4e79cd5d7204f903d6bead4f8)